<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Goals</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="goal_title">Title</string>
    <string name="goal_description">Description</string>
    <string name="goal_category">Category</string>
    <string name="From_date">From</string>
    <string name="From_time">From</string>    
    <string name="To_date">To</string>
    <string name="to_date">to</string>   
    <string name="to_time">to</string> 
    <string name="goal_workload">Nb of hours</string>
    <string name="hours">hrs</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>    
    <string name="title_activity_new_goal">New Goal</string>
    <string name="activities">"Associated activities"</string>
    <string name="create">create</string>
    <string name="modify">modify</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="duration">Duration</string>
    <string name="Every">Every</string>
    <string name="until">Until</string> 
    <string name="events">events</string>     
    <string name="footer_add_goal">Add a new goal</string>
    <string name="footer_add_task">Add a new task</string>
    <string name="footer_add_activity">Add a new activity</string>
    <string name="estimatedWorkload">Estimated Work Load</string>
    <string name="nbOf">Nb of</string>
    <string name="my_goal">My Goal</string>
    <string name="my_goals">My Goals</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_activity">My Activity</string>
    <string name="occurrences">occurrences</string>
    <string name="Activity_Workload">Activity Work Load</string>
    <string name="Goal_deleted">Goal deleted</string>    
    <string name="Activity_deleted">Activity deleted</string>
    <string name="tasks">tasks</string>
</resources>
