<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="left"
	    android:orientation="vertical"
	    android:scrollbarAlwaysDrawVerticalTrack="false"
	    android:scrollbars="vertical" >
	
	    <!-- Title -->
	    <TextView
	        android:id="@+id/t_goal_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginBottom="4dp"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="16dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="no title" >
	        <requestFocus />
	    </TextView>
	    
	    <!-- Description -->
	    
	    <TextView
	        android:id="@+id/t_description"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_alignLeft="@id/t_goal_title"
	        android:layout_below="@id/t_goal_title"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="16dp"
	        android:layout_marginTop="4dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="no description"
	        android:lines="2" />        
	       
	    <!-- Duration -->

        <TextView
            android:id="@id/l_task_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/t_goal_title"
            android:layout_below="@id/t_description"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/duration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/t_task_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/l_task_duration"
            android:layout_alignBottom="@+id/l_task_duration"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_toRightOf="@+id/l_task_duration"
            android:text="01:00"
            android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
            android:id="@+id/l_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/l_task_duration"
            android:layout_alignBottom="@+id/l_task_duration"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/t_task_duration"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Repetition -->

        <TextView
            android:id="@+id/l_every"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_goal_title"
            android:layout_below="@id/l_task_duration"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/Every"
            android:textAppearance="?android:attr/textAppearanceMedium" />	    

        <TextView
            android:id="@+id/t_occurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/l_every"
            android:layout_alignBaseline="@id/l_every"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        	            
        <TextView
            android:id="@+id/l_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t_occurrence"
            android:layout_alignBaseline="@id/t_occurrence"
            android:layout_marginLeft="4dp"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceMedium" />        	            
	    
	    <!-- Start Date -->

		<TextView
		    android:id="@+id/l_start_date"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@id/t_goal_title"
		    android:layout_below="@id/l_every"
		    android:layout_marginBottom="4dp"
		    android:layout_marginRight="4dp"
		    android:layout_marginTop="20dp"
		    android:text="@string/From_date"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textStyle="bold" />
		

	    <TextView
	        android:id="@+id/t_start_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/l_start_date"
	        android:layout_alignBottom="@id/l_start_date"
	        android:layout_marginLeft="4dp"
	        android:layout_toRightOf="@id/l_start_date"
	        android:text="01/01/2014"
	        android:textAppearance="?android:attr/textAppearanceMedium" />		
	    
	     <!-- Target Date -->

	    <TextView
	        android:id="@+id/l_end_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/t_goal_title"
	        android:layout_below="@id/l_start_date"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/To_date"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/t_end_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/l_end_date"
	        android:layout_alignBottom="@+id/l_end_date"
	        android:layout_alignLeft="@+id/t_start_date"
	        android:layout_toRightOf="@id/l_end_date"
	        android:text="31/12/2999"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	     <!-- Nb of Tasks -->

	    <TextView
	        android:id="@+id/t_nb_task"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@id/t_goal_title"
	        android:layout_below="@id/l_end_date"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginTop="20dp"
	        android:text="3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/l_nb_task"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/t_nb_task"
	        android:layout_alignBottom="@id/t_nb_task"
	        android:layout_marginLeft="4dp"
	        android:text="@string/tasks"
	        android:textAppearance="?android:attr/textAppearanceMedium" /> 
	        
    </RelativeLayout>

</ScrollView>